Use manualPin()->checked instead of a unused method from Wizard

When we refactor the code seems that we forgot to remove all
Wizard::manualPin() usage.  This commit remove that code to be sure
that this never happen again.

BUG: 277878
FIXED-IN: 1.1.1.